implement processors in Java